- fixes in settings.py related to openAPI documentation bugs - changes in the views related to the display of user data - corrected permissions - creating an endpoint for updating user data

--- a/blog_be/requirements.txt
+++ b/blog_be/requirements.txt
@@ -1,6 +1,6 @@
 dj-rest-auth
 django
-django-allapip install pre-commituth
+pre-commit
 django-cors-headers
 djangorestframework
 django-heroku
@@ -11,3 +11,4 @@ faker
 psycopg2-binary
 gunicorn
 dj-database-url
+django-allauth
