--- a/blog_be/docker-compose.yml
+++ b/blog_be/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      - POSTGRES_DB=cvt_blog
+      - POSTGRES_DB=blog
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - TZ=Europe/Warsaw
