blog_be: - correction of errors in accessing the post - launching the container in Docker

--- a/blog_be/Dockerfile
+++ b/blog_be/Dockerfile
@@ -1,15 +1,19 @@
 FROM python:3
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /blog-be
 
-COPY requirements_docker.txt .
-RUN pip install -r requirements_docker.txt
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 COPY . .
 #ADD manage.py /blog-be
-#ADD /accounts /blog-be
+#ADD /authentication /blog-be
 #ADD /api_server /blog-be
 #ADD /blog_be /blog-be
-RUN python manage.py migrate
-RUN python manage.py populateblog 20
-EXPOSE 8000
-#RUN python manage.py runserver 0.0.0.0:8000
+#RUN python manage.py makemigrations
+#RUN python manage.py migrate
+#RUN python manage.py populateblog 100
+EXPOSE 8888
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8888"]
+#RUN python manage.py runserver
 
