--- a/blog_be/requirements.txt
+++ b/blog_be/requirements.txt
@@ -1,14 +1,91 @@
-dj-rest-auth
-django
-pre-commit
-django-cors-headers
-djangorestframework
-django-heroku
-django-rest-swagger
-django-rest-swagger-django3fix
-drf-spectacular
-faker
-psycopg2-binary
-gunicorn
-dj-database-url
-django-allauth
+asgiref==3.5.2
+asttokens==2.0.5
+attrs==22.1.0
+autopep8==1.6.0
+backcall==0.2.0
+certifi==2022.6.15
+cffi==1.15.1
+cfgv==3.3.1
+charset-normalizer==2.1.0
+colorama==0.4.5
+commonmark==0.9.1
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==37.0.4
+debugpy==1.6.2
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.5
+dj-database-url==0.5.0
+dj-rest-auth==2.2.5
+Django==4.0.6
+django-allauth==0.51.0
+django-cors-headers==3.13.0
+django-debug-toolbar==3.5.0
+django-heroku==0.3.1
+django-rest-swagger==2.2.0
+django-rest-swagger-django3fix==2.2.0
+django-silk==5.0.1
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+drf-spectacular==0.23.1
+drf-yasg==1.21.3
+executing==0.9.0
+Faker==13.15.1
+filelock==3.7.1
+gprof2dot==2021.2.21
+gunicorn==20.1.0
+httpie==3.2.1
+identify==2.5.2
+idna==3.3
+inflection==0.5.1
+ipython==8.4.0
+itypes==1.2.0
+jedi==0.18.1
+Jinja2==3.1.2
+jsonschema==4.7.2
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+multidict==6.0.2
+nodeenv==1.7.0
+oauthlib==3.2.0
+openapi-codec==1.3.2
+packaging==21.3
+parso==0.8.3
+pickleshare==0.7.5
+pip-review==1.1.1
+platformdirs==2.5.2
+pre-commit==2.20.0
+prompt-toolkit==3.0.30
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+pure-eval==0.2.2
+pycodestyle==2.9.0
+pycparser==2.21
+Pygments==2.12.0
+PyJWT==2.4.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2022.1
+PyYAML==6.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rich==12.5.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+simplejson==3.17.6
+six==1.16.0
+sqlparse==0.4.2
+stack-data==0.3.0
+toml==0.10.2
+traitlets==5.3.0
+tzdata==2022.1
+uritemplate==4.1.1
+urllib3==1.26.11
+virtualenv==20.16.2
+wcwidth==0.2.5
+whitenoise==6.2.0
