--- a/blog_be/requirements.txt
+++ b/blog_be/requirements.txt
@@ -18,23 +18,22 @@ defusedxml==0.7.1
 distlib==0.3.5
 dj-database-url==0.5.0
 dj-rest-auth==2.2.5
-Django==4.0.6
+Django==4.1
 django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-debug-toolbar==3.5.0
 django-heroku==0.3.1
+django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 django-rest-swagger-django3fix==2.2.0
 django-silk==5.0.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.23.1
-drf-yasg==1.21.3
 executing==0.9.0
 Faker==13.15.1
 filelock==3.7.1
 gprof2dot==2021.2.21
-gunicorn==20.1.0
 httpie==3.2.1
 identify==2.5.2
 idna==3.3
