blog_fe: - improved error handling - support for the new endpoit "parameters" - different support for pagination and authors filter
blog_be:
- creating a new endpoint for sending parameters
- docker parameterization - .env
- rebuilding tests and utils

--- a/blog_be/docker-compose.yml
+++ b/blog_be/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_DB=blog
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
       - TZ=Europe/Warsaw
     volumes:
       - db:/var/lib/postgresql/data
