--- a/blog_be/requirements.txt
+++ b/blog_be/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
 asttokens==2.0.5
+atomicwrites==1.4.1
 attrs==22.1.0
 autopep8==1.6.0
 backcall==0.2.0
@@ -16,12 +17,13 @@ debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
 distlib==0.3.5
-dj-database-url==0.5.0
+dj-database-url==1.0.0
 dj-rest-auth==2.2.5
 Django==4.1
 django-allauth==0.51.0
 django-cors-headers==3.13.0
 django-debug-toolbar==3.5.0
+django-environ==0.9.0
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
@@ -30,19 +32,22 @@ django-silk==5.0.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.23.1
-executing==0.9.0
+executing==0.9.1
 Faker==13.15.1
 filelock==3.7.1
-gprof2dot==2021.2.21
+gprof2dot==2022.7.29
+gunicorn==20.1.0
 httpie==3.2.1
-identify==2.5.2
+identify==2.5.3
 idna==3.3
-inflection==0.5.1
+inflection==0.3.1
+iniconfig==1.1.1
 ipython==8.4.0
 itypes==1.2.0
 jedi==0.18.1
 Jinja2==3.1.2
-jsonschema==4.7.2
+jsonschema==4.9.1
+lazy-object-proxy==1.7.1
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 multidict==6.0.2
@@ -54,18 +59,27 @@ parso==0.8.3
 pickleshare==0.7.5
 pip-review==1.1.1
 platformdirs==2.5.2
+pluggy==1.0.0
 pre-commit==2.20.0
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pure-eval==0.2.2
-pycodestyle==2.9.0
+py==1.11.0
+pycodestyle==2.9.1
 pycparser==2.21
 Pygments==2.12.0
 PyJWT==2.4.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
 PySocks==1.7.1
+pytest==7.1.2
+pytest-assert-utils==0.3.1
+pytest-common-subject==1.0.6
+pytest-django==4.5.2
+pytest-drf==1.1.3
+pytest-fixture-order==0.1.4
+pytest-lambda==1.3.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.1
@@ -81,10 +95,12 @@ six==1.16.0
 sqlparse==0.4.2
 stack-data==0.3.0
 toml==0.10.2
+tomli==2.0.1
 traitlets==5.3.0
 tzdata==2022.1
 uritemplate==4.1.1
 urllib3==1.26.11
-virtualenv==20.16.2
+virtualenv==20.16.3
 wcwidth==0.2.5
 whitenoise==6.2.0
+wrapt==1.14.1
