--- a/blog_be/Dockerfile
+++ b/blog_be/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /blog-be
+WORKDIR .
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
