--- a/blog_fe/package.json
+++ b/blog_fe/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
