--- a/blog_fe/package.json
+++ b/blog_fe/package.json
@@ -20,7 +20,10 @@
     "babel-loader": "^8.2.5",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "clean-webpack-plugin": "^4.0.0",
+    "html-react-parser": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "jodit": "^3.19.4",
+    "jodit-react": "^1.3.14",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
@@ -33,7 +36,7 @@
     "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot",
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "devDependencies": {
